# corgi

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
doc/: search-index.js  settings.html  source-files.js
doc/lib/: all.html  index.html
doc/src/lib/: lib.rs.html  numbers.rs.html  tensor.rs.html
examples/: custom.rs
src/: activation.rs  array.rs  blas.rs  cost.rs  dense.rs  initializer.rs  layer.rs  lib.rs  model.rs  nn.rs  nn_functions.rs  numbers.rs  optimizer.rs  tensor.rs
src/array/: arithmetic.rs  image.rs  linalg.rs  mod.rs  nonlinearity.rs
src/layer/: conv.rs  dense.rs  mod.rs  pool.rs  reshape.rs
src/layers/: dense.rs  mod.rs
src/optimizer/: gd.rs  mod.rs
src/optimizers/: gd.rs  mod.rs
