[package]
name = "corgi"
description = "Machine learning, and automatic differentation implementation for Rust"
keywords = ["machine-learning", "neural-network", "deep-learning", "autograd", "tensor"]
categories = ["mathematics", "science"]
version = "0.8.8"
authors = ["Patrick Song <32438365+patricksongzy@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/patricksongzy/corgi"
repository = "https://github.com/patricksongzy/corgi"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
approx = "0.4.0"
libc = { version = "0.2", optional = true }

[features]
f32 = []
blas = ["libc"]
